shorty: fixed geometry of desktop area to prevent scrollbars

--- a/css/shorty.css
+++ b/css/shorty.css
@@ -46,7 +46,7 @@
 .shorty-desktop {
   display: inline-block;
   position: absolute;
-  width: 100%; height: 100%;
+/*   width: 100%; height: 100%; */
   background: transparent;
   text-align: left;
   margin-top: 30px;
